WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138489
Apply std::unique_ptr to slowPathCall()
https://bugs.webkit.org/show_bug.cgi?id=138489
Summary
Apply std::unique_ptr to slowPathCall()
Gyuyoung Kim
Reported
2014-11-06 19:08:54 PST
SSIA.
Attachments
Patch
(22.65 KB, patch)
2014-11-06 19:15 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2014-11-06 19:15:03 PST
Created
attachment 241156
[details]
Patch
Mark Lam
Comment 2
2014-11-07 00:37:38 PST
Comment on
attachment 241156
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-11-07 01:21:47 PST
Comment on
attachment 241156
[details]
Patch Clearing flags on attachment: 241156 Committed
r175745
: <
http://trac.webkit.org/changeset/175745
>
WebKit Commit Bot
Comment 4
2014-11-07 01:21:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug